# kimera

./: .dockerignore  .env.example  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  coverage.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: .dynatrace-env.example  Dynatrace.md.template
.github/workflows/: ci.yml  makefile.yml
assets/: architecture.html  logo.txt
config/: default.yaml  env_mappings.yaml
config/checks/: workload.yaml
config/exploits/: dangerous-capabilities.yaml  host-namespace-sharing.yaml  missing-network-policies.yaml  missing-resource-limits.yaml  privileged-containers.yaml  rbac-abuse.yaml  registry.yaml
config/kind/: test-cluster.yaml
config/profiles/: development.yaml  production.yaml  training.yaml  unguard.yaml
config/techniques/: C1-sa-token-theft.yaml  C2-secret-enumeration.yaml  C3-configmap-extraction.yaml  C5-metadata-ssrf.yaml  C6-env-var-secrets.yaml  C7-list-secrets-stealth.yaml  DE1-delete-events.yaml  DE2-disable-psa.yaml  DE3-policy-exception-bypass.yaml  DE4-label-mutation-bypass.yaml  E1-privileged-escape.yaml  E2-capability-abuse.yaml  E3-host-namespace-escape.yaml  E8-rbac-escalation.yaml  EX1-exec-into-pod.yaml  EX2-ephemeral-container.yaml  L1-network-probe.yaml  L2-pod-exec-lateral.yaml  L5-dns-enumeration.yaml  L6-data-store-access.yaml  P1-cronjob-persistence.yaml  P2-sa-persistence.yaml  P3-deploy-backdoor.yaml  R1-enumerate-namespaces.yaml  R10-detect-cni-runtime.yaml  R2-enumerate-workloads.yaml  R3-enumerate-services.yaml  R4-enumerate-service-accounts.yaml  R5-enumerate-rbac.yaml  R6-enumerate-network-policies.yaml  R7-enumerate-secrets-metadata.yaml  R8-permission-probe.yaml  R9-detect-admission.yaml  S5-cilium-startup-window.yaml  S6-gatekeeper-sync-race.yaml  S7-kyverno-ssrf.yaml  V1-admission-validation.yaml  V2-network-policy-validation.yaml  V3-rbac-validation.yaml  registry.yaml
deploy/helm/kimera/: Chart.yaml  values.yaml
deploy/helm/kimera/templates/: deployment.yaml  job.yaml  rbac.yaml  serviceaccount.yaml
docs/contributing/: docstring-standards.md
examples/: README.md  basic_usage.py
k8s_exploit_toolkit/: __init__.py  cli.py  exploit_k8s.py
k8s_exploit_toolkit/application/config/: __init__.py  loader.py  schemas.py
k8s_exploit_toolkit/application/plugins/: __init__.py  registry.py
k8s_exploit_toolkit/container/: README.md  __init__.py  requirements.txt
k8s_exploit_toolkit/container/assessment/: scanner.py
k8s_exploit_toolkit/container/core/: config.py  exceptions.py  k8s_client.py  logger.py
k8s_exploit_toolkit/container/make_vulnerable/: base.py  dangerous_capabilities.py  host_namespace_sharing.py  missing_resource_limits.py  privileged_containers.py
k8s_exploit_toolkit/container/remediations/: __init__.py  patcher.py
k8s_exploit_toolkit/core/: __init__.py  client.py  config.py  logger.py
k8s_exploit_toolkit/domain/: __init__.py  models.py
k8s_exploit_toolkit/domain/interfaces/: exploit_plugin.py
k8s_exploit_toolkit/plugins/: base.py
kimera/: __init__.py  banner.py  cli.py  exploit_k8s.py
kimera/application/config/: loader.py  registry.py  schemas.py
kimera/application/plugins/: registry.py
kimera/cli/: __init__.py  assess.py  enforce.py  exploit.py  generate.py  manage.py  secure.py  validate.py
kimera/container/: README.md  enforcement.py  resource_applier.py
kimera/container/assessment/: scanner.py
kimera/container/core/: command.py  config.py  exceptions.py  journal.py  k8s_client.py
kimera/container/infrastructure/: __init__.py  dt_enrichment.py  dt_query_strategies.py  enforcement.py  resource_applier.py
kimera/container/integrations/dynatrace/: data_models.py  enrichment.py  mcp_client.py  query_strategies.py
kimera/container/make_vulnerable/: __init__.py  base.py  dangerous_capabilities.py  deployment_patch.py  host_namespace_sharing.py  missing_network_policies.py  missing_resource_limits.py  privileged_containers.py  probe_runner.py  rbac_abuse.py  test_loader.py
kimera/container/remediations/: generator.py  patcher.py
kimera/container/validation/: admission.py  engine.py  models.py  network_policy.py  rbac.py
kimera/core/: api_executor.py  assessor.py  enrichment.py  enumerator.py  findings.py  technique_engine.py  technique_registry.py
kimera/domain/: models.py
kimera/domain/interfaces/: __init__.py  exploit_plugin.py
kimera/mcp/: __main__.py  server.py
kimera/plugins/: __init__.py  base.py
kimera/prompts/: dql_query_system.j2  dql_query_user.j2  dql_reference.yaml  exploit_system.j2  exploit_user.j2  generate_system.j2  generate_user.j2
scripts/: setup-dynatrace-md.sh
scripts/test/: deploy-vulnerable-app.sh  reset-cluster.sh  setup-cluster.sh  teardown-cluster.sh
scripts/test-cluster/: setup.sh  teardown.sh
tests/: __init__.py  test_apply.py  test_basic.py  test_cli.py  test_command.py  test_config.py  test_core_assessor.py  test_core_findings.py  test_core_technique_engine.py  test_dt_mcp_client.py  test_dt_query_strategies.py  test_enforcement.py  test_exceptions.py  test_exploit_generation.py  test_journal.py  test_k8s_client.py  test_logger.py  test_mcp_server.py  test_missing_network_policies.py  test_package.py  test_probe_runner.py  test_revert.py  test_security_test.py  test_stealth_techniques.py  test_test_loader.py  test_validation_admission.py  test_validation_models.py  test_validation_netpol.py  test_validation_rbac.py
